++++++++++++
FCTX Changes
++++++++++++

Whats new in FCTX 1.4.3
-----------------------

 - ENH: Allow user to mutate main's argv (useful for initializing
   libraries. Thanks to RhysU.
 - FIX: Warning corrections for GCC 4.3.4, Intell 11.1. Thanks to
   RhysU.

Whats new in FCTX 1.4.2
-----------------------

 - FIX: DOC - Updated Getting Started sample to use FCT_QTEST_END.
   Thanks to RhysU for the fix.

Whats new in FCTX 1.4.1
-----------------------

 - FIX: Compiler regression with MSV compilers. FCTX should be back to
   compiling for the MSVC.

Whats new in FCTX 1.4.0
-----------------------

 - ENH: Custom logger. You can now write and install a customized
   logger. See the examples/custom_logger directory within the source
   for details.
 - ENH: Test and Test Suites grow their own duration value. Getting the
   time for a particular test or test suite is a common logging
   operation. In order to simplify logging the test and test suite
   objects will now take care to report their durations.
 - FIX: Fix warnings generated for a "blank test" (i.e. "FCT_BGN() {}
   FCT_END()").

Whats new in FCTX 1.3.2
-----------------------

 - FIX: Use size_t instead of int to remove some nuisance warnings on a
   64 bit compiler.

Whats new in FCTX 1.3.1
-----------------------

 - FIX: JUnit logger now displays the correct XML header.

Whats new in FCTX 1.3.0
-----------------------

 - ENH: Add JUnit support thanks to timrule (http://github.com/timrule).
   (http://github.com/imb/fctx/issues/closed#issue/10)
 - ENH (#3): Add helpful string checks. These functions will produce
   error messages that are relevant.
   (http://github.com/imb/fctx/issues/closed#issue/3)
     - New fct_chk_incl_str, will check that a string includes a
       substring and report an useful error message if it does not
       include the substring.
     - New fct_chk_incl_istr, case insensitive variant of
       fct_chk_incl_str.